fixed overflow

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -15,7 +15,6 @@ body{
   background-size:cover;
   background-position:center;
   position:relative;
-    overflow-y: hidden;
     font-family: 'Comic Neue', cursive;
 }
 
